# LightTrack-ncnn

./: .gitignore  BUG_FIXES_REPORT.md  CMakeLists.txt  LightTrack.cpp  README.md  main.cpp
include/: LightTrack.h  timer.h
include/ncnn/: platform.h
include/opencv2/: cvconfig.h  opencv_modules.hpp
include/opencv4/opencv2/: cvconfig.h
lib/: libopencv_world.so.4.4
model/: lighttrack_init.param  lighttrack_neck_head.param  lighttrack_update.param
